# linear-tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  draft.md  skills-lock.json
.claude/skills/coding-guidelines/: SKILL.md
.claude/skills/conventional-commit/: SKILL.md
.claude/skills/verify/: SKILL.md
src/: app.rs  config.rs  event.rs  keys.rs  logging.rs  main.rs
src/api/: client.rs  types.rs
src/auth/: mod.rs  oauth.rs  server.rs  token.rs
src/ui/: cycle_detail.rs  cycle_list.rs  issue_detail.rs  issue_list.rs  mod.rs  popup.rs  project_detail.rs  project_list.rs
tests/fixtures/: cycles.json  issue_detail.json  issues.json  my_issues.json  projects.json  team_members.json  teams.json  viewer.json  workflow_states.json
