[package]
name = "linear-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP / GraphQL
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
open = "5"

# Config
toml = "0.8"
directories = "5"

# Error handling
anyhow = "1"
